after edit alot

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,14 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="http://cdn.shopify.com/s/files/1/1092/2552/products/GF_BEEBOP_47f26891-bc1d-4477-88f4-4897442501d3_grande.png?v=1461891461">
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://smartlock.google.com/client"></script>
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
+	</script>
+	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </body>
 </html>
